# muth

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/lib/: mod.rs
src/lib/pitch/: degree.rs  interval.rs  mod.rs  note.rs  note_range.rs  pitch_class.rs  scale_family.rs
src/lib/rhythm/: beat_duration.rs  beat_time.rs  mod.rs  rhythm.rs  subdivision.rs
src/main/: audio.rs  config.rs  generate.rs  mod.rs
src/main/ui/: app.rs  console.rs  mod.rs
